k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox-app
  template:
    metadata:
      labels:
        app: hivebox-app
    spec:
      containers:
      - name: hivebox-app
        image: hivebox-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hivebox-app
spec:
  type: NodePort
  selector:
    app: hivebox-app
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30050
